--- a/Men.html
+++ b/Men.html
@@ -113,7 +113,7 @@
                   <div class="card h-100">
                       <img class="card-img-top" src="Media/6.png" alt="black leather boots" />
                       <div class="card-body p-4">
-                          <div class="text-center">>
+                          <div class="text-center">
                               <h5 class="fw-bolder">GH Elite</h5>
                               $33.00
                           </div>
